# aspnetcore/src/IO.Swagger/Controllers/DefaultApi.cs
@@ -60,5 +60,22 @@ namespace IO.Swagger.Controllers
 
             throw new NotImplementedException();
         }
+
+        /// <summary>
+        /// 
+        /// </summary>
+        /// <param name="body"></param>
+        /// <response code="200">log recorded</response>
+        [HttpPost]
+        [Route("/log")]
+        [ValidateModelState]
+        [SwaggerOperation("LogPost")]
+        public virtual IActionResult LogPost([FromBody]Envelope body)
+        { 
+            //TODO: Uncomment the next line to return response 200 or use other options such as return this.NotFound(), return this.BadRequest(..), ...
+            // return StatusCode(200);
+
+            throw new NotImplementedException();
+        }
     }
 }
